syntax = "proto3";

package llmai;

service LLMAIService {
  rpc Chat (ChatOptions) returns (ChatCompletionResponse);
  rpc ChatStream (stream ChatOptions) returns (stream ChatCompletionResponse);
}

message ChatOptions {
  string userInput = 1;
  string key = 2;
}

message ChatCompletionResponse {
  string id = 1;
  int32 timestamp = 2;
  string uuid = 3;
  string event = 4;
  string data = 5;
}